--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>aurelia-start</title>
+    <title>Ben Johnson</title>
 
     <!-- css styles -->
     <link rel="stylesheet" href="jspm_packages/github/Semantic-Org/Semantic-UI@2.1.6/semantic.css">
-    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/site.css">
     <!-- end css styles -->
 </head>
@@ -23,7 +23,6 @@
 <script src="config.js"></script>
 <script>
     System.import('aurelia-bootstrapper').catch(console.error.bind(console));
-    System.import('jquery');
     System.import('semantic-ui');
 </script>
 </body>
