--- a/client/app.html
+++ b/client/app.html
@@ -1,5 +1,14 @@
 <template>
-    <div class="ui sidebar menu inverted vertical">
+    <div class="ui sidebar menu vertical left visible">
+        <div class="header item heading-section">
+            <div>
+                <p>Ben<strong>Johnson</strong></p>
+            </div>
+            <div>
+                <p>Software Engineer</p>
+                <p>Software Enthusiast</p>
+            </div>
+        </div>
         <a class="item">
             Hello world
         </a>
