work on showing resume

--- a/client/app.html
+++ b/client/app.html
@@ -1,4 +1,6 @@
 <template>
+    <require from="components/section-link.html"></require>
+
     <div class="ui sidebar menu vertical left visible">
         <div class="header item heading-section">
             <div>
@@ -9,11 +11,6 @@
                 <p>Software Enthusiast</p>
             </div>
         </div>
-        <a class="item">
-            Hello world
-        </a>
-        <a class="item">
-            go home
-        </a>
+        <section-link name="Test" icon="fa-graduation-cap" icon-color="red"></section-link>
     </div>
 </template>
