--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,10 @@
     <title>Ben Johnson</title>
 
     <!-- css styles -->
-    <link rel="stylesheet" href="jspm_packages/github/Semantic-Org/Semantic-UI@2.1.6/semantic.css">
+    <link rel="stylesheet" href="lib/foundation6/css/foundation.min.css">
+    <link rel="stylesheet" href="lib/foundation6/css/app.css">
     <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/site.css">
     <!-- end css styles -->
 </head>
@@ -21,9 +23,11 @@
 
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
+<script src="jspm_packages/github/components/jquery@2.1.4/jquery.min.js"></script>
+<script src="lib/foundation6/js/foundation.min.js"></script>
+<script src="lib/foundation6/js/app.js"></script>
 <script>
     System.import('aurelia-bootstrapper').catch(console.error.bind(console));
-    System.import('semantic-ui');
 </script>
 </body>
 </html>
