bit more styling

--- a/client/app.html
+++ b/client/app.html
@@ -6,6 +6,17 @@
     <div class="off-canvas-wrapper">
         <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
             <div class="off-canvas position-left reveal-for-large" id="offCanvas" data-off-canvas>
+                <div class="menu-header">
+                    <div>
+                        <span class="resume-target capitalize">${person.name}</span>
+                    </div>
+                    <div>
+                        <span class="resume-statement">Software Engineer</span>
+                    </div>
+                    <div>
+                        <span class="resume-statement">NodeJS Enthusiast</span>
+                    </div>
+                </div>
                 <ul data-magellan>
                     <li repeat.for="section of sections | orderSort" >
                         <section-link name="${section.name}" icon="${section.icon}" icon-color="${section.color}" size="1.5"></section-link>
