--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,22 @@
 <script src="lib/foundation6/js/foundation.min.js"></script>
 <script src="lib/foundation6/js/app.js"></script>
 <script>
+    $(function() {
+        $('a[href*=#]:not([href=#])').click(function() {
+            if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+                var target = $(this.hash);
+                target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+                if (target.length) {
+                    $('html,body').animate({
+                        scrollTop: target.offset().top
+                    }, 1000);
+                    return false;
+                }
+            }
+        });
+    });
+</script>
+<script>
     System.import('aurelia-bootstrapper').catch(console.error.bind(console));
 </script>
 </body>
