--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 </head>
 <body aurelia-app="main">
     <div class="splash">
-        <div class="message">aurelia-start</div>
+        <div class="message">loading</div>
         <i class="fa fa-spinner fa-spin"></i>
     </div>
 
