--- a/client/app.html
+++ b/client/app.html
@@ -2,13 +2,14 @@
     <require from="converters/OrderSort"></require>
     <require from="components/section-link.html"></require>
     <require from="components/resume-section.html"></require>
+    <require from="components/contact-section.html"></require>
 
     <div class="off-canvas-wrapper" style="background-color: transparent;">
         <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper style="background-color: transparent;">
             <div class="off-canvas position-left reveal-for-large" id="offCanvas" data-off-canvas style="background-color: transparent;">
                 <div class="menu-header">
                     <div>
-                        <span class="resume-target capitalize">${person.name}</span>
+                        <span class="resume-target capitalize">${info.name}</span>
                     </div>
                     <div style="padding: 0;">
                         <span class="resume-statement">Software Engineer</span>
@@ -21,12 +22,16 @@
                     <li repeat.for="section of sections | orderSort" style="background-color: transparent;">
                         <section-link name="${section.name}" icon="${section.icon}" icon-color="${section.color}" size="1.5"></section-link>
                     </li>
+                    <li>
+                        <section-link name="contact" icon="user" icon-color="navy" size="1.5"></section-link>
+                    </li>
                 </ul>
             </div>
             <div class="off-canvas-content" data-off-canvas-content>
                 <!--page content here-->
                 <div>
                     <resume-section repeat.for="section of sections | orderSort" section.bind="section"></resume-section>
+                    <contact-section info.bind="info"></contact-section>
                 </div>
             </div>
         </div>
