--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,48 +1,18 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Ben Johnson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="styles/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="styles/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="styles/ie9.css" /><![endif]-->
+		<link rel="stylesheet" href="libs/foundation/css/foundation.min.css"/>
+		<link rel="stylesheet" href="styles/site.css"/>
 	</head>
 	<body aurelia-app="main">
-
-		<!-- Header -->
-
-
-		<!-- Main -->
-
-
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
 
 		<!-- Scripts -->
 		<script type="text/javascript" src="jspm_packages/system.js"></script>
 		<script type="text/javascript" src="config.js"></script>
 		<script src="libs/jquery/jquery.min.js"></script>
-		<script src="libs/scrolly/jquery.scrolly.min.js"></script>
-		<script src="libs/scrollzer/jquery.scrollzer.min.js"></script>
-		<script src="js/skel.min.js"></script>
-
-		<script src="js/util.js"></script>
-		<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
-		<script src="js/main.js"></script>
 		<script type="text/javascript" src="jspm_packages/npm/whatwg-fetch@1.0.0/fetch.js"></script>
 		<script>
 			System.import('aurelia-bootstrapper');
