--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -1,7 +1,16 @@
 <template>
     <require from="components/page-menu/page-menu"></require>
 
-    <page-menu></page-menu>
+    <nav class="navbar navbar-default">
+        <div class="navbar-header">
+
+        </div>
+        <ul class="nav navbar-nav">
+            <li  class="active"><a href="#/info"><i class="fa fa-user"></i><span>Info</span></a></li>
+            <li><a href="#/experience"><i class="fa fa-th-list"></i><span>Experience</span></a></li>
+            <li><a href="#/contact"><i class="fa fa-envelope"></i><span>Contact</span></a></li>
+        </ul>
+    </nav>
     <div>
         <router-view></router-view>
     </div>
