--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -5,8 +5,8 @@
         <div class="navbar-header">
 
         </div>
-        <ul class="nav navbar-nav">
-            <li  class="active"><a href="#/info"><i class="fa fa-user"></i><span>Info</span></a></li>
+        <ul class="nav" click.delegate="_onNavClick($event)">
+            <li class="active"><a href="#/info"><i class="fa fa-user"></i><span>Info</span></a></li>
             <li><a href="#/experience"><i class="fa fa-th-list"></i><span>Experience</span></a></li>
             <li><a href="#/contact"><i class="fa fa-envelope"></i><span>Contact</span></a></li>
         </ul>
