--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -3,15 +3,19 @@
 
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-
+            <img class="avatar" src="images/avatar.jpg"/>
+            <div class="navbar-header-title">
+                <h1>Ben Johnson</h1>
+                <span>Software Engineer</span>
+            </div>
         </div>
-        <ul class="nav" click.delegate="_onNavClick($event)">
-            <li class="active"><a href="#/info"><i class="fa fa-user"></i><span>Info</span></a></li>
-            <li><a href="#/experience"><i class="fa fa-th-list"></i><span>Experience</span></a></li>
-            <li><a href="#/contact"><i class="fa fa-envelope"></i><span>Contact</span></a></li>
+        <ul id="navMenu" class="nav" click.delegate="_onNavClick($event)">
+            <li class="active" click.trigger="_navigateToRoute('info')"><i class="fa fa-user"></i><span>Info</span></li>
+            <li click.trigger="_navigateToRoute('experience')"><i class="fa fa-th-list"></i><span>Experience</span></li>
+            <li click.trigger="_navigateToRoute('contact')"><i class="fa fa-envelope"></i><span>Contact</span></li>
         </ul>
     </nav>
-    <div>
+    <div class="page-content">
         <router-view></router-view>
     </div>
 </template>
