adding small menu

--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -1,6 +1,11 @@
 <template>
     <require from="components/page-menu/page-menu"></require>
 
+    <div class="title-bar">
+        <button type="button"><i class="fa fa-bars"></i></button>
+        <div class="title-bar-title">Ben Johnson</div>
+    </div>
+
     <nav class="navbar navbar-default">
         <div class="navbar-header">
             <img class="avatar" src="images/avatar.jpg"/>
