--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -1,25 +1,7 @@
 <template>
     <require from="components/page-menu/page-menu"></require>
 
-    <div class="title-bar">
-        <button type="button"><i class="fa fa-bars"></i></button>
-        <div class="title-bar-title">Ben Johnson</div>
-    </div>
-
-    <nav class="navbar navbar-default">
-        <div class="navbar-header">
-            <img class="avatar" src="images/avatar.jpg"/>
-            <div class="navbar-header-title">
-                <h1>Ben Johnson</h1>
-                <span>Software Engineer</span>
-            </div>
-        </div>
-        <ul id="navMenu" class="nav" click.delegate="_onNavClick($event)">
-            <li class="active" click.trigger="_navigateToRoute('info')"><i class="fa fa-user"></i><span>Info</span></li>
-            <li click.trigger="_navigateToRoute('experience')"><i class="fa fa-th-list"></i><span>Experience</span></li>
-            <li click.trigger="_navigateToRoute('contact')"><i class="fa fa-envelope"></i><span>Contact</span></li>
-        </ul>
-    </nav>
+    <page-menu></page-menu>
     <div class="page-content">
         <router-view></router-view>
     </div>
