--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -1,8 +1,19 @@
 <template>
     <require from="components/page-menu/page-menu"></require>
+    <require from="components/about/about.html"></require>
+    <require from="components/skills/skills.html"></require>
+    <require from="components/experience/experience.html"></require>
+    <require from="components/projects/projects.html"></require>
+    <require from="components/education/education.html"></require>
+    <require from="components/contact/contact.html"></require>
 
     <page-menu></page-menu>
     <div class="page-content">
-
+        <about></about>
+        <skills></skills>
+        <experience></experience>
+        <projects></projects>
+        <education></education>
+        <contact></contact>
     </div>
 </template>
