checking in to move to laptop

--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -1,7 +1,7 @@
 <template>
     <require from="components/page-menu/page-menu"></require>
-    <require from="components/about/about.html"></require>
-    <require from="components/skills/skills.html"></require>
+    <require from="components/about/about"></require>
+    <require from="components/skills/skills"></require>
     <require from="components/experience/experience.html"></require>
     <require from="components/projects/projects.html"></require>
     <require from="components/education/education.html"></require>
