--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -2,7 +2,7 @@
     <require from="components/page-menu/page-menu"></require>
     <require from="components/about/about"></require>
     <require from="components/skills/skills"></require>
-    <require from="components/experience/experience.html"></require>
+    <require from="components/experience/experience"></require>
     <require from="components/projects/projects.html"></require>
     <require from="components/education/education.html"></require>
     <require from="components/contact/contact.html"></require>
