--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -3,9 +3,9 @@
     <require from="components/about/about"></require>
     <require from="components/skills/skills"></require>
     <require from="components/experience/experience"></require>
-    <require from="components/projects/projects.html"></require>
-    <require from="components/education/education.html"></require>
-    <require from="components/contact/contact.html"></require>
+    <require from="components/projects/projects"></require>
+    <require from="components/education/education"></require>
+    <require from="components/contact/contact"></require>
 
     <page-menu></page-menu>
     <div class="page-content">
