just finish resume

--- a/src/client/pages/app.html
+++ b/src/client/pages/app.html
@@ -6,9 +6,11 @@
     <require from="components/projects/projects"></require>
     <require from="components/education/education"></require>
     <require from="components/contact/contact"></require>
+    <require from="components/contact-header/contact-header"></require>
 
     <page-menu></page-menu>
     <div class="page-content">
+        <contact-header></contact-header>
         <about></about>
         <skills></skills>
         <experience></experience>
