fixed style for IE

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="styles/site.css"/>
 	</head>
 	<body aurelia-app="main">
+		<div class="loader centered"></div>
 
 		<!-- Scripts -->
 		<script type="text/javascript" src="jspm_packages/system.js"></script>
