--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,17 +2,32 @@
 <html>
 	<head>
 		<title>Ben Johnson</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="styles/site.css"/>
+		<meta charset="UTF-8">
+
+		<meta name="msapplication-tap-highlight" content="no" />
+		<meta name="format-detection" content="telephone=no">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="yes">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
+
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+		<meta http-equiv="Pragma" content="no-cache"/>
+		<meta http-equiv="Expires" content="-1"/>
+		
+		<!--styles-->
+		<link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css"/>
+		<link rel="stylesheet" href="app/styles/site.css"/>
 	</head>
-	<body aurelia-app="main">
+	<body aurelia-app="app/main">
 		<div class="loader centered"></div>
 
 		<!-- Scripts -->
+		<script src="libs/jquery/jquery.min.js"></script>
 		<script type="text/javascript" src="jspm_packages/system.js"></script>
-		<script type="text/javascript" src="config.js"></script>
-		<script src="libs/jquery/jquery.min.js"></script>		
+		<script type="text/javascript" src="config.js"></script>				
 		<script>
 			System.import('aurelia-bootstrapper');
         </script>
